Fix accent keyboard overflow
Actually fixes #222

--- a/src/css/set-detail.scss
+++ b/src/css/set-detail.scss
@@ -205,6 +205,8 @@
 }
 
 #learn {
+    --track: transparent;
+    --thumb: #6b473c;
     .mdc-text-field + button {
         width: 9%;
         margin-left: 2%;
